home page css changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="./css/frontpage.css">
 <script  src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
 <script type="text/javascript" src="./js/loanprocess.js"></script>
 <script src="./js/zcrmsdk.js" ></script>
@@ -21,8 +21,10 @@
 	<div id='rightbody'>
 		<div id='maincontent'>
 			<div id="company">
-				<img src="./images/zillumicon.png" id='logo'>
-				<span id='logotext'>Zillum Inc</span>
+				<div id='logoline'>
+					<div id='justlogo' ><img src="./images/zillumicon.png" id='logo' /> </div>
+					<div id='logotext' class='mt10'>Zillum Inc</div>
+				</div>
 				<div id='companydesc'>
 					Zillium App, a power tool to review all  your home loan applications in one place, in no time. Stay on top of your applications to be verified and get them moving for quick evaluation.
 				</div>
