logo click home page redirection

--- a/approve2.html
+++ b/approve2.html
@@ -12,12 +12,13 @@
 <script type="text/javascript" src="./js/loanprocess.js"></script>
 <script src="./js/zcrmsdk.js" ></script>
 </head>
-<body style="display: none;">
 		<div class="topcontainer">
 			<div class='row newbar' id='toprow'>
 				<div class="col-3 mt11">
-					<img src="./images/zillumicon.png" id='logo2'>&nbsp;&nbsp;&nbsp;
-					<span id='logotext2'>Zillum Inc</span>
+					<div id='logocontainer'>
+						<div id='logoimg' ><img src="./images/zillumicon.png" id='logo2' />&nbsp;&nbsp;&nbsp;</div>
+						<div id='logotext2'>Zillum Inc</div>
+					</div>
 				</div>
 				<div class="col-5">&nbsp;</div>
 				<div class="col-4 mt14" id='topname'>
