--- a/view2.html
+++ b/view2.html
@@ -17,8 +17,10 @@
 		<div class="topcontainer">
 			<div class='row newbar' id='toprow'>
 				<div class="col-3 mt11">
-					<img src="./images/zillumicon.png" id='logo2'>&nbsp;&nbsp;&nbsp;
-					<span id='logotext2'>Zillum Inc</span>
+					<div id='logocontainer'>
+						<div id='logoimg' ><img src="./images/zillumicon.png" id='logo2' />&nbsp;&nbsp;&nbsp;</div>
+						<div id='logotext2'>Zillum Inc</div>
+					</div>
 				</div>
 				<div class="col-5">&nbsp;</div>
 				<div class="col-4 mt14" id='topname'>
